resources/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: fake-endpoints-$id
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 8080
