resources/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: fake-slice-$id
addressType: IPv4
endpoints:
  - addresses:
    - "1.2.3.4"
    conditions:
      ready: true
ports:
  - name: http
    protocol: TCP
    port: 80
